objects/transobj2__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>transobj2</label>
    <nameField>
        <label>transobj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>transobj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>